# CppCalculator

./: CMakelists.txt  README.md
.github/workflows/: ci_githubhosted.yml
src/: Calculator.cpp  main.cpp
tests/: CMakeLists.txt  README.md  calculator_unit_tests.cpp
